// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/SelectTheaterList renders with theaters 1`] = `
.c1 {
  font-size: 16px;
  line-height: 20px;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  color: #6B6B6B;
  text-transform: uppercase;
  margin: 24px 0px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 196px;
  margin-bottom: 32px;
  overflow: hidden;
}

.c2 {
  margin-bottom: 16px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
}

.c4 {
  background: #ffffff;
  border: 1px solid #000000;
  border-radius: 4px;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  padding: 0px 16px;
  margin: 8px 0px;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  font-size: 16px;
  font-weight: bold;
  text-transform: uppercase;
  white-space: nowrap;
  width: 176px;
}

.c4:hover,
.c4:focus {
  cursor: pointer;
  background: #F0B323;
  border: 1px solid #F0B323;
  color: #ffffff;
}

.c4:focus {
  outline: none;
}

.c4:nth-child(3n - 1) {
  margin-left: 16px;
  margin-right: 16px;
}

.c5 {
  background: #F0B323;
  border: 1px solid #F0B323;
  border-radius: 4px;
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  padding: 0px 16px;
  margin: 8px 0px;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  font-size: 16px;
  font-weight: bold;
  text-transform: uppercase;
  white-space: nowrap;
  width: 176px;
}

.c5:hover,
.c5:focus {
  cursor: pointer;
  background: #F0B323;
  border: 1px solid #F0B323;
  color: #ffffff;
}

.c5:focus {
  outline: none;
}

.c5:nth-child(3n - 1) {
  margin-left: 16px;
  margin-right: 16px;
}

@media (max-width:768px) {
  .c4 {
    width: calc(50% - 16px);
    margin: 0px 16px 16px 0px;
  }

  .c4:nth-child(3n - 1) {
    margin: 0px 16px 16px 0px;
  }
}

@media (max-width:480px) {
  .c4 {
    width: 100%;
    margin: 0px 0px 16px 0px;
  }

  .c4:nth-child(3n - 1) {
    margin: 0px 0px 16px 0px;
  }
}

@media (max-width:768px) {
  .c5 {
    width: calc(50% - 16px);
    margin: 0px 16px 16px 0px;
  }

  .c5:nth-child(3n - 1) {
    margin: 0px 16px 16px 0px;
  }
}

@media (max-width:480px) {
  .c5 {
    width: 100%;
    margin: 0px 0px 16px 0px;
  }

  .c5:nth-child(3n - 1) {
    margin: 0px 0px 16px 0px;
  }
}

<section
  className="c0"
>
  <h2
    className="c1 c2"
  >
    Select Theater
  </h2>
  <div
    className="c3"
  >
    <button
      className="c4"
      id="mueller"
      onClick={[Function]}
      onKeyUp={[Function]}
      title="Mueller"
    >
      Mueller
    </button>
    <button
      className="c4"
      id="ritz"
      onClick={[Function]}
      onKeyUp={[Function]}
      title="Ritz"
    >
      Ritz
    </button>
    <button
      className="c4"
      id="south-lamar"
      onClick={[Function]}
      onKeyUp={[Function]}
      title="South Lamar"
    >
      South Lamar
    </button>
    <button
      className="c5"
      id="village"
      onClick={[Function]}
      onKeyUp={[Function]}
      title="Village"
    >
      Village
    </button>
  </div>
</section>
`;

exports[`components/SelectTheaterList renders without theaters 1`] = `
.c1 {
  font-size: 16px;
  line-height: 20px;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  color: #6B6B6B;
  text-transform: uppercase;
  margin: 24px 0px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 196px;
  margin-bottom: 32px;
  overflow: hidden;
}

.c2 {
  margin-bottom: 16px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
}

<section
  className="c0"
>
  <h2
    className="c1 c2"
  >
    Select Theater
  </h2>
  <div
    className="c3"
  />
</section>
`;
